# universal_rabbit

./: LICENSE  README.md  pyproject.toml
notebooks/: equations.ipynb
