[tool.poetry]
name = "universal-rabbit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "universal_rabbit"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
